# fastapi-faker

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MAINTENANCE.md  README.md  backup.gitlab-ci  docker-compose.yml  env.sample  pyproject.toml  requirements.txt
app/: alembic.ini  backend_pre_start.py  initial_data.py  initial_data_dev.py  initial_fake_data.py  main.py  newrelic-dev.ini  newrelic-prd.ini  newrelic-stage.ini  requirements.txt
app/credit/: __init__.py  credit_service.py
app/credit/api/: api.py
app/credit/base_data/: cs_atts.csv
app/credit/exceptions/: user.py
app/credit/interfaces/: calculator.py  score.py  user_credit.py
app/credit/models/: calculator.py  user.py
app/ext_services/: __init__.py
app/ext_services/boton/: boton_interface.py  boton_service.py
app/ext_services/finnotech/: finnotech_service.py
app/ext_services/jibit/: jibit_service.py
app/ext_services/sms_ir/: sms_ir_interface.py
app/ext_services/tasks/: __init__.py  schedule.yml
app/ext_services/wallex/: wallex_service.py
app/finance/: __init__.py  finance_service.py
app/finance/api/: api.py
app/finance/exceptions/: bank_payment.py  bank_profile.py  payment_gateway.py  refund.py  transfer.py
app/finance/interfaces/: bank.py  bank_pay.py  bank_pay_gw.py  bank_profile.py  bank_transactions.py  dashboard.py  debt_user.py  refund.py  settle.py  settle_credit.py  settle_pgw.py  transfer.py
app/finance/models/: bank_pay.py  bank_pay_gw.py  bank_profile.py  bank_transactions.py  debt_user.py  refund.py  transfer.py  (+2 more)
app/migrations/: env.py  generate-migration.py
app/notification/: notification_service.py
app/order/: __init__.py  order_service.py
app/seeder/: models_seeder.py
app/system/: config.py  middlewares.py
app/system_object/: __init__.py  system_object_service.py
app/user/: __init__.py  user_service.py
app/user_assets/: __init__.py  service_agent.py
app/utils/: __init__.py  custom_http_exception.py  global_request_validator.py  jdate_navigator.py  no_cache_redirect.py  response_manager.py  response_model.py
scripts/: beat-start.sh  docker-entrypoint.sh  flower-start.sh  generate-migration.sh  migrate.sh  pre-start.sh  start.sh  worker-start.sh
(+270 files in other folders)
