[tool.poetry]
name = "app"
version = "0.0.21"
description = "Wallpay services."
authors = ["Pourya Moghadam <p.moghadam@wallex.net>"]
maintainers = ["Pourya Moghadam <p.moghadam@wallex.net>"]
license = "Wallpay"
readme = "README.md"
homepage = ""
repository = "https://gitlab.ecoex.ir/phinix/finance/services"
documentation = ""
keywords = [""]

[tool.poetry.urls]
"Issues" = ""

[tool.poetry.scripts]
init = "backend_pre_start:main"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.9.2"
amqp = "5.1.1"
anyio = "3.6.2"
async-timeout = "4.0.2"
asyncio = "3.4.3"
attrs = "22.2.0"
billiard = "3.6.4.0"
celery = "5.2.7"
certifi = "2022.12.7"
charset-normalizer = "3.0.1"
click = "8.1.3"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.2.0"
dataclasses = "0.6"
dnspython = "2.3.0"
ecdsa = "0.18.0"
email-validator = "1.3.1"
exceptiongroup = "1.1.0"
fastapi = "0.89.1"
findimports = "2.3.0"
h11 = "0.14.0"
idna = "3.4"
iniconfig = "2.0.0"
jdate = "0.0.3"
jdatetime = "4.1.0"
jinja2 = "3.1.2"
kavenegar = "1.1.2"
khayyam = "3.0.17"
kombu = "5.2.4"
mako = "1.2.4"
markupsafe = "2.1.2"
motor = "3.1.1"
newrelic = "8.5.0"
numpy = "1.24.1"
packaging = "23.0"
pandas = "1.5.3"
passlib = "1.7.4"
persian-tools = "0.0.10"
pika = "1.3.1"
pluggy = "1.0.0"
postgres = "4.0"
prompt-toolkit = "3.0.36"
psycopg2-binary = "2.9.5"
psycopg2-pool = "1.1"
pyasn1 = "0.4.8"
pydantic = "1.10.4"
pymongo = "4.3.3"
pytest = "7.2.1"
python-dateutil = "2.8.2"
python-dotenv = "0.21.1"
python-jose = "3.3.0"
python-multipart = "0.0.5"
pytz = "2022.7.1"
redis = "4.4.2"
requests = "2.28.2"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "1.4.46"
sqlalchemy-utils = "0.39.0"
starlette = "0.22.0"
tenacity = "8.1.0"
tomli = "2.0.1"
typing = "3.7.4.3"
typing-extensions = "4.4.0"
unidecode = "1.3.6"
urllib3 = "1.26.14"
uvicorn = "0.20.0"
vine = "5.0.0"
wcwidth = "0.2.6"
aiohttp = "^3.8.4"
flower = "^1.2.0"
pyyaml = "^6.0"
firebase-admin = "^6.1.0"
bcrypt = "^4.0.1"


[tool.poetry.group.dev.dependencies]
faker = "^18.7.0"
flake8 = "^6.0.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
